add mock data in page

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -16,6 +16,45 @@
   color: $fontImportantThree;
 }
 
+.tb-link {
+  cursor: pointer;
+  overflow: hidden;
+  text-overflow:ellipsis;
+  white-space: nowrap;
+
+  &:active {
+    opacity: 0.7;
+  }
+}
+
+.click-link {
+  cursor: pointer;
+
+  &:hover {
+    opacity: 0.7;
+  }
+
+  &:active {
+    opacity: 1;
+  }
+}
+
+.link-fontImportant {
+  cursor: pointer;
+
+  &:hover {
+    color: $fontImportant;
+  }
+
+  &:active {
+    opacity: 0.7;
+  }
+}
+
+.no-user-select {
+  user-select: none;
+}
+
 // flex
 .flex {
   display: flex;
