adjustment display style

--- a/src/assets/css/atom.scss
+++ b/src/assets/css/atom.scss
@@ -13,3 +13,15 @@
 .ml10 {
     margin-left: 10px;
 }
+
+.mb10 {
+    margin-bottom: 10px;
+}
+
+.mb20 {
+    margin-bottom: 20px;
+}
+
+.pt30 {
+    padding-top: 30px;
+}
