--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -19,8 +19,20 @@
 .tb-link {
   cursor: pointer;
   overflow: hidden;
-  text-overflow:ellipsis;
+  text-overflow: ellipsis;
   white-space: nowrap;
+
+  &:active {
+    opacity: 0.7;
+  }
+}
+
+.link-fontImportant {
+  cursor: pointer;
+
+  &:hover {
+    color: $fontImportant;
+  }
 
   &:active {
     opacity: 0.7;
@@ -39,18 +51,6 @@
   }
 }
 
-.link-fontImportant {
-  cursor: pointer;
-
-  &:hover {
-    color: $fontImportant;
-  }
-
-  &:active {
-    opacity: 0.7;
-  }
-}
-
 .no-user-select {
   user-select: none;
 }
@@ -58,4 +58,32 @@
 // flex
 .flex {
   display: flex;
+
+  &.between {
+    justify-content: space-between;
+  }
+
+  &.around {
+    justify-content: space-around
+  }
+
+  &.jc-center {
+    justify-content: center
+  }
+
+  &.jc-end {
+    justify-content: flex-end
+  }
+
+  &.ai-center {
+    align-items: center;
+  }
+
+  &.column {
+    flex-direction: column;
+  }
+}
+
+.op07 {
+  opacity: 0.7;
 }
